# osrs_ge

./: .coverage  .envrc  .gitignore  README.md  default.nix  item_data.db  main.py  mydb.sqlite3  pyproject.toml
.claude/agents/: test-coverage-generator.md
.github/workflows/: tests.yml
aggregator/db/: data_input.py
aggregator/models/: data_models.py  item_model.py  item_volume_5m.py
aggregator/util/: averages.py  margin.py
db/: data_input.py
models/: item_model.py
tests/: conftest.py
tests/aggregator/db/: test_data_input.py
tests/aggregator/models/: test_data_models.py  test_item_model.py  test_item_volume_5m.py
tests/aggregator/util/: test_averages.py  test_margin.py
tests/usage/: test_best_margin.py  test_item_lookup.py
usage/: best_margin.py  buy_spike.py  item_lookup.py  sell_spike.py  volume_spike.py
