[project]
name = "osrs_ge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "sqlmodel>=0.0.24",
    "streamlit>=1.48.1",
    "streamlit-autorefresh>=1.0.1",
]

[dependency-groups]
dev = ["black>=25.1.0", "ruff>=0.12.10", "ty>=0.0.1a19"]

[tool.hatch.build.targets.sdist]
include = ["aggregator"]

[tool.hatch.build.targets.wheel]
include = ["aggregator"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
lint.select = ["ALL"]
lint.ignore = [
    "A001",
    "A003",
    "A005",
    "ANN401",
    "B008",
    "B019",
    "C405",
    "COM812",
    "D200",
    "D203",
    "D205",
    "D212",
    "D400",
    "D401",
    "D403",
    "D404",
    "D407",
    "D413",
    "D415",
    "E501",
    "E712",
    "I001",
    "N818",
    "PGH003",
    "PGH004",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "PT003",
    "PT011",
    "PT012",
    "S101",
    "S105",
    "S108",
    "S301",
    "S311",
    "UP017",
    "UP034",
    "W605",
]
exclude = [
    ".direnv",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "__pypackages__",
]

[tool.ty.environment]
extra-paths = [".direnv/site"]
